2013-08-16  Kris Van Hees  <kris.van.hees@oracle.com>

	* libdtrace/dt_link.c (prepare_elf64): Fix relocation type.

2013-08-05  Nick Alcock  <nick.alcock@oracle.com>

	* Makecheck (check*-probe-all-syscalls*): Avoid using -t.

2013-07-31  Nick Alcock  <nick.alocck@oracle.com>

	* libdtrace/Build (DRTI_OBJ): Build without coverage.
	* test/triggers/Build: Move trigger template eval above overrides.
	Override NOLDFLAGS for internals tests that can have coverage.
	* runtest.sh: Fix userspace coverage output.

2013-07-23  Nick Alcock  <nick.alcock@oracle.com>

	* NEWS: Updated.
	* dtrace-utils.spec: changelog and expected kernel version updated.
	Support multiple kernel variants.  Install sdt.h.  Do not depend
	on fakeroot.
	* libdtrace-ctf: Pull in 0.4.0.

	* GNUmakefile (DTRACE_OPT_SYSLIBDIR): Remove.
	(LD_LIBRARY_PATH): Likewise.
	(DTRACE): Set only if not set on the command line. Prerequisite
	of...
	* cmd/Build (run-dtrace): ... this new target, runs dtrace from
	the objdir or /usr/sbin depending on an env var.
	* Makefunctions (hdr-template): Use run-dtrace, not $(DTRACE).
	(dof-template): Likewise.
	* Makecheck (check-installed*): These now set DTRACE and the env var
	run-dtrace uses, and recursively run...
	(check-installed*-internal): ... these new rules, renamed from the
	old -install rules.
	* */Build (install): Do not explicitly specify installation user
	and group.

2013-07-22  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_proc.c (dt_proc_resume): Debugging improvement.
	(dt_proc_control_cleanup): Mention when a lock is being reset.
	(dt_proc_dpr_lock): Mention the PID being locked.
	(dt_proc_dpr_unlock): Likewise for unlocking.
	(dt_proc_destroy): Only reduce dph_lrucnt if not already retired.
	(dt_proc_grab): Add to the dph_lrulist and boost dpr_refs before
	scanning for zero-ref retired processes to discard.
	* libproc/Pcontrol.c (Pwait_internal): Don't return on attempt to
	Pwait() for a breakpointed process, just don't block.  Immediately